fix(ZNTA-1910): fixed wrapping for the three types of text that wraps when 100% in editor

--- a/server/zanata-frontend/src/frontend/app/editor/containers/Root/index.css
+++ b/server/zanata-frontend/src/frontend/app/editor/containers/Root/index.css
@@ -363,12 +363,10 @@ ul.source-infolist {
   border-bottom-color: transparent;
 }
 
-ul.u-listInline li .u-textSuccess {
-  width:110%;
-}
-
-ul.u-listInline li .u-textHighlight {
-  width:110%;
+ul.u-listInline li .u-textSuccess, ul.u-listInline li .u-textSecondary,
+ul.u-listInline li .u-textHighlight
+{
+  width:120%;
 }
 
 /* bootstrap override */
